# linear-mcp-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.html  THIRD_PARTY_LICENSES.yaml  TODO.md  about.toml  deny.toml  install.sh  release-please-config.json  test_tools.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  release-please.yml  release.yml
src/: auth.rs  cache.rs  client.rs  error.rs  format.rs  main.rs  server.rs  types.rs
src/graphql/: filters.rs  mod.rs  queries.rs  response.rs
src/tools/: add_attachment.rs  add_comment.rs  add_favorite.rs  add_issue_label.rs  add_issue_to_cycle.rs  add_issue_to_release.rs  add_project_to_initiative.rs  add_reaction.rs  archive_customer_need.rs  archive_cycle.rs  archive_initiative.rs  archive_initiative_update.rs  archive_issue.rs  archive_label.rs  archive_project.rs  archive_project_status.rs  archive_release.rs  archive_workflow_state.rs  attach_link_url.rs  batch_create_issues.rs  bulk_update_issues.rs  check_custom_view_has_subscribers.rs  create_agent_activity.rs  create_agent_session.rs  create_customer.rs  create_customer_need.rs  create_customer_status.rs  create_customer_tier.rs  create_cycle.rs  create_document.rs  create_email_intake_address.rs  create_emoji.rs  create_entity_external_link.rs  create_git_automation_state.rs  create_git_automation_target_branch.rs  create_initiative.rs  create_initiative_relation.rs  create_initiative_update.rs  create_issue.rs  create_issue_from_template.rs  (+217 more)
supply-chain/: audits.toml  config.toml
